after creating api

--- a/Machine learning implementation.ipynb
+++ b/Machine learning implementation.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "ad9833d4-81d2-4272-85bd-0c76f1c29bbf",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "ca61fb4e-81e5-4519-b597-ca6ce0c6dbc0",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "9     15.2  386.71  17.10  18.9  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "33f82351-1282-4d12-b65b-1265222959de",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "65728669-2d8a-4ccd-b877-f57e8c615fd9",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "max     37.970000   50.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "2a542c06-d15c-4f73-8f8d-769cdcb3ca1b",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "9d7b917f-4f2f-4ca4-b802-1510bef371fe",
    "metadata": {},
    "outputs": [],
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "d83945be-d0ee-4812-8cef-f3297475f602",
    "metadata": {},
    "outputs": [
@@ -945,7 +945,7 @@
        "MEDV     0.249929 -0.381626 -0.468536 -0.507787  0.333461 -0.737663  1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "c907ef0c-a427-4df2-8447-fbbab440e11f",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "f52593d7-0c9b-4679-b63f-27b8cf3f36fd",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "fb722f89-4443-41bc-ad00-a7030acb73a0",
    "metadata": {},
    "outputs": [],
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "a7977afa-fa20-402a-bb91-d43b06c55f32",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
        "4     18.7  396.90   5.33  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "57784b1c-f072-406a-a70c-d0749f36a462",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1214,7 @@
        "Name: MEDV, Length: 506, dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "a20cefa4-f814-43bd-a9d7-c3f522a9589f",
    "metadata": {},
    "outputs": [],
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "f85de761-0813-465b-852e-88eb7680f939",
    "metadata": {},
    "outputs": [],
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "429e0bc3-abe5-486c-b106-43627586bbb3",
    "metadata": {},
    "outputs": [],
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "id": "901110cf-b923-443a-8c4d-6f4bcaf386ea",
    "metadata": {},
    "outputs": [],
@@ -1763,11 +1763,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "44b31690-2879-4a3f-91ad-1204a7ad15db",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pickle.dump(scaler, open('scaling.pkl','wb'))"
+   ]
   },
   {
    "cell_type": "code",
